--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ authors = ["Maximilien DI DIO <mdidio@pm.me>"]
 version = "0.1.0"
 edition = "2021"
 description = "Unofficial rust client for neutrinoapi.com"
+repository = "https://github.com/Diskyver/neutral"
+
 license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
