fix(Cargo.toml): add explicitely MIT license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "neutral"
 authors = ["Maximilien DI DIO <mdidio@pm.me>"]
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 description = "Unofficial rust client for neutrinoapi.com"
 keywords = ["neutrinoapi", "client", "api"]
 repository = "https://github.com/Diskyver/neutral"
 
 license-file = "LICENSE"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
