--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.17"
 assert_approx_eq = "1.1.0"
 serde_with = "1.14.0"
 secrecy = "0.8.0"
+neutral_types = "0.1.0"
 
 [dependencies.tokio]
 version = "1"
